# vox-format

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  Package.swift  README.md  TODO.md
.github/workflows/: release.yml  swift-tests.yml
Formula/: vox.rb
Sources/vox/: CreateCommand.swift  ExtractCommand.swift  InspectCommand.swift  SearchCommand.swift  ValidateCommand.swift  VoxCLI.swift
Tests/VoxCLITests/: VoxCLIIntegrationTests.swift
docs/: VOX-FORMAT.md
examples/: README.md
examples/character/: narrator-with-context-manifest.json  narrator-with-context.vox
examples/cloned-voice/: manifest.json
examples/minimal/: manifest.json  narrator.vox
examples/multi-engine/: cross-platform.vox  manifest.json
examples/multi-language/: manifest.json
examples/multi-model/: manifest.json
implementations/python/: .coverage  README.md  pyproject.toml
implementations/python/src/voxformat/: __init__.py  errors.py  manifest.py  reader.py  validator.py  vox_file.py  writer.py
implementations/python/src/voxformat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
implementations/python/tests/: test_manifest_decoding.py  test_reader.py  test_roundtrip.py  test_validator.py  test_writer.py
implementations/swift/: Package.resolved  Package.swift  README.md
implementations/swift/Sources/VoxFormat/: VoxEntry.swift  VoxError.swift  VoxFile+AutoManifest.swift  VoxFile+ModelQuery.swift  VoxFile+Validation.swift  VoxFile.swift  VoxFormat.swift  VoxManifest.swift  VoxMigrator.swift  VoxModelQueryable.swift  VoxReader.swift  VoxValidator.swift  VoxWriter.swift
implementations/swift/Tests/VoxFormatTests/: EmbeddingEntryTests.swift  EmbeddingLanguageTests.swift  IntegrationTests.swift  ManifestDecodingTests.swift  MigratorTests.swift  RoundtripTests.swift  ValidatorTests.swift  (+4 more)
requirements/: QUICK-LOOK.md
schemas/: README.md  manifest-v0.1.0.json  manifest-v0.2.0.json  manifest-v0.3.0.json  manifest-v0.4.0.json  validate-examples.sh
schemas/test/: invalid-age-range.json  invalid-gender.json  invalid-missing-vox-version.json  invalid-timestamp.json  invalid-uuid.json
tools/vox-cli/: Package.resolved  Package.swift  README.md
tools/vox-cli-python/: README.md  pyproject.toml  vox-dev.sh
tools/vox-cli-python/src/vox_cli/: __init__.py  cli.py  create.py  extract.py  inspect.py  validate.py
tools/vox-cli-python/src/vox_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/vox-cli/.build/: build.db  debug.yaml  release.yaml  workspace-state.json
(+1019 files in other folders)
